backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-backend
  template:
    metadata:
      labels:
        app: expense-backend
    spec:
      containers:
        - name: backend
          image: 162625029288.dkr.ecr.ap-south-1.amazonaws.com/expense-tracker:latest
          ports:
            - containerPort: 8080
