backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-backend-service
spec:
  selector:
    app: expense-backend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
